fix: less stringent overlap check for helpers