@@ -101,10 +101,10 @@ public class EventHelperServiceImpl implements de.hofuniversity.assemblyplanner.
         if(helper.getTeam() != null && helper.getTeam().equals(event.getOrder().getTeam()))
             throw new IllegalArgumentException("the employee is already registered as a team member");
 
-        List<Event> overlaps = eventRepository.findOverlappingEvents(event);
+        List<Event> overlaps = eventRepository.findAllOverlappingEvents(event);
         overlaps = overlaps.stream()
                 .filter(e -> {
-                    boolean isHelper = !e.getHelpers().contains(helper);
+                    boolean isHelper = e.getHelpers().contains(helper);
                     Order o = e.getOrder();
 
                     if(o.getTeam() == null)
@@ -112,7 +112,7 @@ public class EventHelperServiceImpl implements de.hofuniversity.assemblyplanner.
 
                     boolean isTeamMember = o.getTeam().getEmployees().stream().anyMatch(member -> member.equals(helper));
                     return !(isHelper || isTeamMember);
-                }).collect(Collectors.toList());
+                }).toList();
 
         if(!overlaps.isEmpty())
             throw new IllegalArgumentException("the employee is already working on another event in the same timeframe");
